--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "freeice": "^2.2.2",
+    "lib-jitsi-meet": "^1.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1",
+    "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
